Study and test two approches for human face detection

--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,11 +137,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a Human Face Detector\n",
+    "\n",
+    "Once seen that. We will build a function that returns True if a human face is detected in an image and `False` otherwise.\n",
+    "Our function will take as input a file path and will return a boolean value."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# returns \"True\" if face is detected in image stored at img_path\n",
+    "def face_detector(img_path):\n",
+    "    img = cv2.imread(img_path)\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    faces = face_cascade.detectMultiScale(gray)\n",
+    "    return len(faces) > 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, lets test our function with a part of our dataset. An see its performance agains human and dog images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Correctly classified human faces:  99.0\n",
+      "% Wrong dog faces classied as human :  7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
+    "\n",
+    "#-#-# Do NOT modify the code above this line. #-#-#\n",
+    "\n",
+    "## TODO: Test the performance of the face_detector algorithm \n",
+    "## on the images in human_files_short and dog_files_short.\n",
+    "human_faces_detected  = 0\n",
+    "false_human_faces_detected  = 0\n",
+    "for file in human_files_short:\n",
+    "    if face_detector(file):\n",
+    "        human_faces_detected += 1 \n",
+    "classified_human_faces = 100 * human_faces_detected/len(human_files_short)\n",
+    "print(\"% Correctly classified human faces: \", classified_human_faces)\n",
+    "\n",
+    "for file in dog_files_short:\n",
+    "    if face_detector(file):\n",
+    "        false_human_faces_detected += 1 \n",
+    "classified_dog_faces_as_humans = 100 * false_human_faces_detected/len(dog_files_short)\n",
+    "print(\"% Wrong dog faces classied as human : \", classified_dog_faces_as_humans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the most clear and easy to use method. However, there exists more complex solutions like the proposed in:\n",
+    "https://github.com/timesler/facenet-pytorch/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Correctly classified human faces:  98.0\n",
+      "% Wrong dog faces classied as human :  6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "\n",
+    "mtcnn = MTCNN(\n",
+    "    image_size=160, margin=0, min_face_size=20,\n",
+    "    thresholds=[0.6, 0.7, 0.7], factor=0.709, post_process=True,\n",
+    "    device=device\n",
+    ")\n",
+    "\n",
+    "resnet = InceptionResnetV1(pretrained='vggface2').eval().to(device)\n",
+    "\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
+    "\n",
+    "\n",
+    "human_faces_detected  = 0\n",
+    "false_human_faces_detected  = 0\n",
+    "for file in human_files_short:\n",
+    "    img = cv2.imread(file)\n",
+    "    dim = (160, 160)\n",
+    "    resized = cv2.resize(img, dim, interpolation = cv2.INTER_AREA)\n",
+    "    x_aligned = mtcnn(resized, return_prob=False)\n",
+    "    if x_aligned is not None:\n",
+    "        human_faces_detected += 1 \n",
+    "classified_human_faces = 100 * human_faces_detected/len(human_files_short)\n",
+    "print(\"% Correctly classified human faces: \", classified_human_faces)\n",
+    "\n",
+    "for file in dog_files_short:\n",
+    "    img = cv2.imread(file)\n",
+    "    dim = (160, 160)\n",
+    "    resized = cv2.resize(img, dim, interpolation = cv2.INTER_AREA)\n",
+    "    x_aligned = mtcnn(resized, return_prob=False)\n",
+    "    if x_aligned is not None:\n",
+    "        false_human_faces_detected += 1 \n",
+    "classified_dog_faces_as_humans = 100 * false_human_faces_detected/len(dog_files_short)\n",
+    "print(\"% Wrong dog faces classied as human : \", classified_dog_faces_as_humans)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is a complex solution, although its parameters are more difficult to tune. Because of that, we will proceed with the first option, the cascade classifier."
+   ]
   }
  ],
  "metadata": {
