--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "% Correctly classified human faces:  98.0\n",
-      "% Wrong dog faces classied as human :  6.0\n"
+      "% Wrong dog faces classied as human :  7.0\n"
      ]
     }
    ],
@@ -275,6 +275,200 @@
    "source": [
     "It is a complex solution, although its parameters are more difficult to tune. Because of that, we will proceed with the first option, the cascade classifier."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='step2'></a>\n",
+    "## Step 2: Detect Dogs\n",
+    "\n",
+    "In this section, we use a [pre-trained model](http://pytorch.org/docs/master/torchvision/models.html) to detect dogs in images.  \n",
+    "\n",
+    "### Obtain Pre-trained VGG-16 Model\n",
+    "\n",
+    "We will use a pretrained VGG-16 model with weights that have been trained on [ImageNet](http://www.image-net.org/), a very large, very popular dataset used for image classification and other vision tasks. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VGG(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU(inplace=True)\n",
+       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (6): ReLU(inplace=True)\n",
+       "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): ReLU(inplace=True)\n",
+       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (11): ReLU(inplace=True)\n",
+       "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (13): ReLU(inplace=True)\n",
+       "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (15): ReLU(inplace=True)\n",
+       "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (18): ReLU(inplace=True)\n",
+       "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (20): ReLU(inplace=True)\n",
+       "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (22): ReLU(inplace=True)\n",
+       "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (25): ReLU(inplace=True)\n",
+       "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (27): ReLU(inplace=True)\n",
+       "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (29): ReLU(inplace=True)\n",
+       "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Dropout(p=0.5, inplace=False)\n",
+       "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): Dropout(p=0.5, inplace=False)\n",
+       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torchvision.models as models\n",
+    "\n",
+    "# define VGG16 model\n",
+    "VGG16 = models.vgg16(pretrained=True)\n",
+    "\n",
+    "# check if CUDA is available\n",
+    "use_cuda = torch.cuda.is_available()\n",
+    "\n",
+    "# move model to GPU if CUDA is available\n",
+    "if use_cuda:\n",
+    "    VGG16 = VGG16.cuda()\n",
+    "VGG16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implement the Dog Detector\n",
+    "\n",
+    "First, we will build a helper function that given a image path predicts the class of the image content in Vgg16 net. Then, we will build our dog_detector.\n",
+    "\n",
+    "While looking at the [dictionary](https://gist.github.com/yrevar/942d3a0ac09ec9e5eb3a), we can see that Vgg16 has been trained with a lot of dog breeds. More explicetly, the dictionary keys 151-268, inclusive, to include all categories from `'Chihuahua'` to `'Mexican hairless'`. Then, we need only check if the pre-trained model predicts an index between 151 and 268 (inclusive).\n",
+    "\n",
+    "Our `dog_detector` function below will returns `True` if a dog is detected in an image (and `False` if not)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "# Set PIL to be tolerant of image files that are truncated.\n",
+    "from PIL import ImageFile\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
+    "def VGG16_predict(img_path):\n",
+    "    '''\n",
+    "    Use pre-trained VGG-16 model to obtain index corresponding to \n",
+    "    predicted ImageNet class for image at specified path\n",
+    "    \n",
+    "    Args:\n",
+    "        img_path: path to an image\n",
+    "        \n",
+    "    Returns:\n",
+    "        Index corresponding to VGG-16 model's prediction\n",
+    "    '''\n",
+    "    \n",
+    "    ## TODO: Complete the function.\n",
+    "    ## Load and pre-process an image from the given img_path\n",
+    "    ## Return the *index* of the predicted class for that image\n",
+    "    normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                     std=[0.229, 0.224, 0.225])\n",
+    "    \n",
+    "    n_channels = 3\n",
+    "    shape = 224\n",
+    "    \n",
+    "    img_transform = transforms.Compose([\n",
+    "            transforms.Resize((shape, shape)),\n",
+    "            transforms.ToTensor(),\n",
+    "            normalize,\n",
+    "    ])\n",
+    "\n",
+    "    \n",
+    "    img_data = Image.open(img_path)\n",
+    "    image_normarlized = img_transform(img_data).view(-1,n_channels,shape,shape).cuda()\n",
+    "    \n",
+    "    VGG16.eval()\n",
+    "    output = VGG16.forward(image_normarlized)\n",
+    "    _, pred = torch.max(output, 1)  \n",
+    "    \n",
+    "    pred = pred.cpu().numpy()\n",
+    "    \n",
+    "    return pred # predicted class index\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### returns \"True\" if a dog is detected in the image stored at img_path\n",
+    "def dog_detector(img_path):\n",
+    "    vgg_class = VGG16_predict(img_path)\n",
+    "    if 151 <=  vgg_class <= 268 :\n",
+    "        dog_class = True\n",
+    "    else:\n",
+    "        dog_class = False\n",
+    "    \n",
+    "    return dog_class # true/false\n",
+    "dog_detector('dogImages/train/001.Affenpinscher/Affenpinscher_00001.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
