--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -464,6 +464,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test the dog detector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Correctly classified dog faces:  99.0\n",
+      "% Wrong human faces classied as dogs :  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### TODO: Test the performance of the dog_detector function\n",
+    "### on the images in human_files_short and dog_files_short.\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
+    "\n",
+    "#-#-# Do NOT modify the code above this line. #-#-#\n",
+    "\n",
+    "## TODO: Test the performance of the face_detector algorithm \n",
+    "## on the images in human_files_short and dog_files_short.\n",
+    "dog_faces_detected  = 0\n",
+    "false_dog_faces_detected  = 0\n",
+    "\n",
+    "for file in dog_files_short:\n",
+    "    if dog_detector(file):\n",
+    "        dog_faces_detected += 1 \n",
+    "classified_dog_faces = 100 * dog_faces_detected/len(dog_files_short)\n",
+    "print(\"% Correctly classified dog faces: \", classified_dog_faces)\n",
+    "\n",
+    "for file in human_files_short:\n",
+    "    if dog_detector(file):\n",
+    "        false_dog_faces_detected += 1 \n",
+    "classified_human_faces_as_dogs = 100 * false_dog_faces_detected/len(human_files_short)\n",
+    "print(\"% Wrong human faces classied as dogs : \", classified_human_faces_as_dogs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a CNN to Classify Dog Breeds (from Scratch)\n",
+    "\n",
+    "Now let's start bulding the dog breed classifier. We will do a first approach from scratch, without transfer learning. \n",
+    "\n",
+    "The task of assigning breed to dogs from images is considered exceptionally challenging. To see why, consider that even a human would have trouble distinguishing between a Brittany and a Welsh Springer Spaniel.\n",
+    "\n",
+    "Brittany | Welsh Springer Spaniel\n",
+    "- | - \n",
+    "<img src=\"images/Brittany_02625.jpg\" width=\"100\"> | <img src=\"images/Welsh_springer_spaniel_08203.jpg\" width=\"200\">\n",
+    "\n",
+    "It is not difficult to find other dog breed pairs with minimal inter-class variation (for instance, Curly-Coated Retrievers and American Water Spaniels).  \n",
+    "\n",
+    "Curly-Coated Retriever | American Water Spaniel\n",
+    "- | -\n",
+    "<img src=\"images/Curly-coated_retriever_03896.jpg\" width=\"200\"> | <img src=\"images/American_water_spaniel_00648.jpg\" width=\"200\">\n",
+    "\n",
+    "\n",
+    "It is worth mentioning that random chance is really low: Not to mention that the classes may be a bit imbalance, but a random guess will provide a correct answer roughly 1 in 133 times, which corresponds to an accuracy of less than 1%. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, lets define some image transformations for data augmentation and the Dataloaders to load the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using_cuda:  True\n",
+      "6680\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# check if CUDA is available\n",
+    "use_cuda = torch.cuda.is_available()\n",
+    "print(\"using_cuda: \", use_cuda)\n",
+    "import os\n",
+    "from torchvision import datasets\n",
+    "from torchvision import transforms\n",
+    "### TODO: Write data loaders for training, validation, and test sets\n",
+    "## Specify appropriate transforms, and batch_sizes\n",
+    "\n",
+    "img_size = 192\n",
+    "\n",
+    "normalize = transforms.Normalize(mean=[0.5,0.5,0.5],\n",
+    "                                 std=[0.5,0.5,0.5])\n",
+    "\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.RandomResizedCrop(img_size),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.ToTensor(),\n",
+    "    normalize\n",
+    "])\n",
+    "\n",
+    "valid_transform = transforms.Compose([\n",
+    "    transforms.Resize(256),\n",
+    "    transforms.CenterCrop(img_size),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.ToTensor(),\n",
+    "    normalize\n",
+    "])\n",
+    "\n",
+    "test_transform = transforms.Compose([\n",
+    "    transforms.Resize(256),\n",
+    "    transforms.CenterCrop(img_size),\n",
+    "    transforms.ToTensor(),\n",
+    "    normalize\n",
+    "])\n",
+    "\n",
+    "train_data = datasets.ImageFolder(\"dogImages/train/\", transform=train_transform)\n",
+    "valid_data = datasets.ImageFolder(\"dogImages/valid/\", transform=valid_transform)\n",
+    "test_data = datasets.ImageFolder(\"dogImages/test/\", transform=test_transform)\n",
+    "\n",
+    "print(len(train_data))\n",
+    "loaders_scratch = {}\n",
+    "loaders_scratch[\"train\"] = torch.utils.data.DataLoader(train_data, batch_size=24, shuffle=True)\n",
+    "loaders_scratch[\"valid\"] = torch.utils.data.DataLoader(valid_data, batch_size=24, shuffle=True)\n",
+    "loaders_scratch[\"test\"] = torch.utils.data.DataLoader(test_data, batch_size=24, shuffle=True)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
