Add the model for transfer learning. Modify it. Train the model

--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -794,78 +794,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1 \tTraining Loss: 4.879175 \tValidation Loss: 4.817964\n",
-      "Validation loss decreased (inf --> 4.817964).  Saving model ...\n",
-      "Epoch: 2 \tTraining Loss: 4.706071 \tValidation Loss: 4.531148\n",
-      "Validation loss decreased (4.817964 --> 4.531148).  Saving model ...\n",
-      "Epoch: 3 \tTraining Loss: 4.536993 \tValidation Loss: 4.404869\n",
-      "Validation loss decreased (4.531148 --> 4.404869).  Saving model ...\n",
-      "Epoch: 4 \tTraining Loss: 4.450654 \tValidation Loss: 4.329554\n",
-      "Validation loss decreased (4.404869 --> 4.329554).  Saving model ...\n",
-      "Epoch: 5 \tTraining Loss: 4.360435 \tValidation Loss: 4.204819\n",
-      "Validation loss decreased (4.329554 --> 4.204819).  Saving model ...\n",
-      "Epoch: 6 \tTraining Loss: 4.283540 \tValidation Loss: 4.143008\n",
-      "Validation loss decreased (4.204819 --> 4.143008).  Saving model ...\n",
-      "Epoch: 7 \tTraining Loss: 4.193170 \tValidation Loss: 4.080745\n",
-      "Validation loss decreased (4.143008 --> 4.080745).  Saving model ...\n",
-      "Epoch: 8 \tTraining Loss: 4.127469 \tValidation Loss: 3.943719\n",
-      "Validation loss decreased (4.080745 --> 3.943719).  Saving model ...\n",
-      "Epoch: 9 \tTraining Loss: 4.070841 \tValidation Loss: 3.904394\n",
-      "Validation loss decreased (3.943719 --> 3.904394).  Saving model ...\n",
-      "Epoch: 10 \tTraining Loss: 3.972747 \tValidation Loss: 3.862375\n",
-      "Validation loss decreased (3.904394 --> 3.862375).  Saving model ...\n",
-      "Epoch: 11 \tTraining Loss: 3.891507 \tValidation Loss: 3.817625\n",
-      "Validation loss decreased (3.862375 --> 3.817625).  Saving model ...\n",
-      "Epoch: 12 \tTraining Loss: 3.832700 \tValidation Loss: 3.782585\n",
-      "Validation loss decreased (3.817625 --> 3.782585).  Saving model ...\n",
-      "Epoch: 13 \tTraining Loss: 3.769346 \tValidation Loss: 3.734919\n",
-      "Validation loss decreased (3.782585 --> 3.734919).  Saving model ...\n",
-      "Epoch: 14 \tTraining Loss: 3.721845 \tValidation Loss: 3.765250\n",
-      "Epoch: 15 \tTraining Loss: 3.665759 \tValidation Loss: 3.647347\n",
-      "Validation loss decreased (3.734919 --> 3.647347).  Saving model ...\n",
-      "Epoch: 16 \tTraining Loss: 3.610550 \tValidation Loss: 3.700443\n",
-      "Epoch: 17 \tTraining Loss: 3.553962 \tValidation Loss: 3.611348\n",
-      "Validation loss decreased (3.647347 --> 3.611348).  Saving model ...\n",
-      "Epoch: 18 \tTraining Loss: 3.507652 \tValidation Loss: 3.661823\n",
-      "Epoch: 19 \tTraining Loss: 3.483836 \tValidation Loss: 3.533721\n",
-      "Validation loss decreased (3.611348 --> 3.533721).  Saving model ...\n",
-      "Epoch: 20 \tTraining Loss: 3.427364 \tValidation Loss: 3.538602\n",
-      "Epoch: 21 \tTraining Loss: 3.366290 \tValidation Loss: 3.521046\n",
-      "Validation loss decreased (3.533721 --> 3.521046).  Saving model ...\n",
-      "Epoch: 22 \tTraining Loss: 3.347517 \tValidation Loss: 3.591671\n",
-      "Epoch: 23 \tTraining Loss: 3.318457 \tValidation Loss: 3.500054\n",
-      "Validation loss decreased (3.521046 --> 3.500054).  Saving model ...\n",
-      "Epoch: 24 \tTraining Loss: 3.233357 \tValidation Loss: 3.477517\n",
-      "Validation loss decreased (3.500054 --> 3.477517).  Saving model ...\n",
-      "Epoch: 25 \tTraining Loss: 3.231973 \tValidation Loss: 3.488890\n",
-      "Epoch: 26 \tTraining Loss: 3.182890 \tValidation Loss: 3.534957\n",
-      "Epoch: 27 \tTraining Loss: 3.163546 \tValidation Loss: 3.514772\n",
-      "Epoch: 28 \tTraining Loss: 3.148475 \tValidation Loss: 3.496620\n",
-      "Epoch: 29 \tTraining Loss: 3.129108 \tValidation Loss: 3.394716\n",
-      "Validation loss decreased (3.477517 --> 3.394716).  Saving model ...\n",
-      "Epoch: 30 \tTraining Loss: 3.065984 \tValidation Loss: 3.373898\n",
-      "Validation loss decreased (3.394716 --> 3.373898).  Saving model ...\n",
-      "Epoch: 31 \tTraining Loss: 3.045412 \tValidation Loss: 3.430784\n",
-      "Epoch: 32 \tTraining Loss: 3.014903 \tValidation Loss: 3.456728\n",
-      "Epoch: 33 \tTraining Loss: 2.994859 \tValidation Loss: 3.452699\n",
-      "Epoch: 34 \tTraining Loss: 2.974007 \tValidation Loss: 3.393007\n",
-      "Epoch: 35 \tTraining Loss: 2.935179 \tValidation Loss: 3.411742\n",
-      "Epoch: 36 \tTraining Loss: 2.949193 \tValidation Loss: 3.334310\n",
-      "Validation loss decreased (3.373898 --> 3.334310).  Saving model ...\n",
-      "Epoch: 37 \tTraining Loss: 2.883252 \tValidation Loss: 3.396316\n",
-      "Epoch: 38 \tTraining Loss: 2.861074 \tValidation Loss: 3.410962\n",
-      "Epoch: 39 \tTraining Loss: 2.873626 \tValidation Loss: 3.465605\n",
-      "Epoch: 40 \tTraining Loss: 2.828332 \tValidation Loss: 3.469510\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# the following import is required for training to be robust to truncated images\n",
     "from PIL import ImageFile\n",
@@ -1041,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1041,188 @@
    "source": [
     "### Model Architecture of transfer learning model\n",
     "\n",
-    "Use transfer learning to create a CNN to classify dog breed."
+    "Use transfer learning to create a CNN to classify dog breed.\n",
+    "\n",
+    "In this case we will use a Vgg16 pretrained on the ImageNet dataset. We will froze all the layers, except for the last one. The classificator layer. We will substitute the classifier layer and create a new sequencial for the task. It will be composed by three fc layers and it will be the unique layer that will be trained.\n",
+    "We will add dropout in order to prevent regularization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace=True)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace=True)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace=True)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace=True)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace=True)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace=True)\n",
+      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (18): ReLU(inplace=True)\n",
+      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace=True)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace=True)\n",
+      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (25): ReLU(inplace=True)\n",
+      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (27): ReLU(inplace=True)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace=True)\n",
+      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+      "  (classifier): Sequential(\n",
+      "    (fc1): Linear(in_features=25088, out_features=4096, bias=True)\n",
+      "    (relu): ReLU()\n",
+      "    (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+      "    (relu2): ReLU()\n",
+      "    (drop): Dropout(p=0.3, inplace=False)\n",
+      "    (fc3): Linear(in_features=1024, out_features=133, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.models as models\n",
+    "import torch.nn as nn\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "## TODO: Specify model architecture \n",
+    "model_transfer = models.vgg16(pretrained=True)\n",
+    "\n",
+    "for param in model_transfer.features.parameters():\n",
+    "    param.requires_grad = False # froze the feature layers\n",
+    "    \n",
+    "\n",
+    "input_features_classifier = model_transfer.classifier[0].in_features\n",
+    "n_dog_classes = 133\n",
+    "\n",
+    "\n",
+    "classifier = nn.Sequential(OrderedDict([\n",
+    "                          ('fc1', nn.Linear(input_features_classifier, 4096)),\n",
+    "                          ('relu', nn.ReLU()),\n",
+    "                          ('fc2', nn.Linear(4096, 1024)),\n",
+    "                          ('relu2', nn.ReLU()),\n",
+    "                          ('drop', nn.Dropout(0.3)),\n",
+    "                          ('fc3', nn.Linear(1024, n_dog_classes))\n",
+    "                          ]))\n",
+    "\n",
+    "model_transfer.classifier = classifier\n",
+    "print(model_transfer)\n",
+    "if use_cuda:\n",
+    "    model_transfer = model_transfer.cuda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use the same optimizer and loss function ans before. However, this time we will set only the paramaeters of classifier to the optimizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion_transfer = nn.CrossEntropyLoss()\n",
+    "optimizer_transfer = optim.Adam(model_transfer.classifier.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 \tTraining Loss: 3.143106 \tValidation Loss: 1.433549\n",
+      "Validation loss decreased (inf --> 1.433549).  Saving model ...\n",
+      "Epoch: 2 \tTraining Loss: 1.920715 \tValidation Loss: 1.145112\n",
+      "Validation loss decreased (1.433549 --> 1.145112).  Saving model ...\n",
+      "Epoch: 3 \tTraining Loss: 1.669965 \tValidation Loss: 0.980613\n",
+      "Validation loss decreased (1.145112 --> 0.980613).  Saving model ...\n",
+      "Epoch: 4 \tTraining Loss: 1.549016 \tValidation Loss: 1.183568\n",
+      "Epoch: 5 \tTraining Loss: 1.460319 \tValidation Loss: 0.944873\n",
+      "Validation loss decreased (0.980613 --> 0.944873).  Saving model ...\n",
+      "Epoch: 6 \tTraining Loss: 1.432104 \tValidation Loss: 0.925609\n",
+      "Validation loss decreased (0.944873 --> 0.925609).  Saving model ...\n",
+      "Epoch: 7 \tTraining Loss: 1.426236 \tValidation Loss: 0.886108\n",
+      "Validation loss decreased (0.925609 --> 0.886108).  Saving model ...\n",
+      "Epoch: 8 \tTraining Loss: 1.347986 \tValidation Loss: 0.939352\n",
+      "Epoch: 9 \tTraining Loss: 1.306630 \tValidation Loss: 1.003777\n",
+      "Epoch: 10 \tTraining Loss: 1.298956 \tValidation Loss: 0.970095\n",
+      "Epoch: 11 \tTraining Loss: 1.299192 \tValidation Loss: 1.023038\n",
+      "Epoch: 12 \tTraining Loss: 1.306413 \tValidation Loss: 0.949146\n",
+      "Epoch: 13 \tTraining Loss: 1.266322 \tValidation Loss: 0.914631\n",
+      "Epoch: 14 \tTraining Loss: 1.257484 \tValidation Loss: 0.881256\n",
+      "Validation loss decreased (0.886108 --> 0.881256).  Saving model ...\n",
+      "Epoch: 15 \tTraining Loss: 1.265281 \tValidation Loss: 0.963785\n",
+      "Epoch: 16 \tTraining Loss: 1.249792 \tValidation Loss: 0.872649\n",
+      "Validation loss decreased (0.881256 --> 0.872649).  Saving model ...\n",
+      "Epoch: 17 \tTraining Loss: 1.211953 \tValidation Loss: 1.015178\n",
+      "Epoch: 18 \tTraining Loss: 1.230979 \tValidation Loss: 0.970619\n",
+      "Epoch: 19 \tTraining Loss: 1.223842 \tValidation Loss: 1.105546\n",
+      "Epoch: 20 \tTraining Loss: 1.230484 \tValidation Loss: 0.929644\n",
+      "Epoch: 21 \tTraining Loss: 1.209767 \tValidation Loss: 0.909281\n",
+      "Epoch: 22 \tTraining Loss: 1.206400 \tValidation Loss: 0.975418\n",
+      "Epoch: 23 \tTraining Loss: 1.174298 \tValidation Loss: 0.979104\n",
+      "Epoch: 24 \tTraining Loss: 1.170769 \tValidation Loss: 0.917874\n",
+      "Epoch: 25 \tTraining Loss: 1.177343 \tValidation Loss: 0.849867\n",
+      "Validation loss decreased (0.872649 --> 0.849867).  Saving model ...\n",
+      "Epoch: 26 \tTraining Loss: 1.175778 \tValidation Loss: 0.818839\n",
+      "Validation loss decreased (0.849867 --> 0.818839).  Saving model ...\n",
+      "Epoch: 27 \tTraining Loss: 1.117751 \tValidation Loss: 1.043443\n",
+      "Epoch: 28 \tTraining Loss: 1.145219 \tValidation Loss: 1.102801\n",
+      "Epoch: 29 \tTraining Loss: 1.190782 \tValidation Loss: 1.028386\n",
+      "Epoch: 30 \tTraining Loss: 1.178263 \tValidation Loss: 1.131282\n",
+      "Epoch: 31 \tTraining Loss: 1.244833 \tValidation Loss: 1.102951\n",
+      "Epoch: 32 \tTraining Loss: 1.233544 \tValidation Loss: 1.089178\n",
+      "Epoch: 33 \tTraining Loss: 1.200643 \tValidation Loss: 1.075331\n",
+      "Epoch: 34 \tTraining Loss: 1.204904 \tValidation Loss: 1.160050\n",
+      "Epoch: 35 \tTraining Loss: 1.163510 \tValidation Loss: 1.114650\n",
+      "Epoch: 36 \tTraining Loss: 1.140558 \tValidation Loss: 1.080020\n",
+      "Epoch: 37 \tTraining Loss: 1.196108 \tValidation Loss: 0.989742\n",
+      "Epoch: 38 \tTraining Loss: 1.188752 \tValidation Loss: 0.990830\n",
+      "Epoch: 39 \tTraining Loss: 1.132153 \tValidation Loss: 1.024940\n",
+      "Epoch: 40 \tTraining Loss: 1.203488 \tValidation Loss: 1.144209\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train the model\n",
+    "n_epochs = 40\n",
+    "\n",
+    "model_transfer = train(n_epochs, loaders_transfer, model_transfer, optimizer_transfer, criterion_transfer, use_cuda, 'model_transfer.pt')\n",
+    "\n",
+    "# load the model that got the best validation accuracy (uncomment the line below)\n",
+    "#model_transfer.load_state_dict(torch.load('model_transfer.pt'))"
    ]
   },
   {
