test the transfer learning model

--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,24 +896,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Loss: 3.221142\n",
-      "\n",
-      "\n",
-      "Test Accuracy: 20% (171/836)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "model_scratch.load_state_dict(torch.load('model_scratch.pt'))\n",
+    "#model_scratch.load_state_dict(torch.load('model_scratch.pt'))\n",
     "def test(loaders, model, criterion, use_cuda):\n",
     "\n",
     "    # monitor test loss and accuracy\n",
@@ -942,7 +931,16 @@
     "\n",
     "    print('\\nTest Accuracy: %2d%% (%2d/%2d)' % (\n",
     "        100. * correct / total, correct, total))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_scratch.load_state_dict(torch.load('model_scratch.pt'))\n",
     "# call test function    \n",
     "test(loaders_scratch, model_scratch, criterion_scratch, use_cuda)"
    ]
@@ -972,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,18 +1217,44 @@
     "# train the model\n",
     "n_epochs = 40\n",
     "\n",
-    "model_transfer = train(n_epochs, loaders_transfer, model_transfer, optimizer_transfer, criterion_transfer, use_cuda, 'model_transfer.pt')\n",
-    "\n",
-    "# load the model that got the best validation accuracy (uncomment the line below)\n",
-    "#model_transfer.load_state_dict(torch.load('model_transfer.pt'))"
+    "model_transfer = train(n_epochs, loaders_transfer, model_transfer, optimizer_transfer, criterion_transfer, use_cuda, 'model_transfer.pt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have our new transfer leaning model trained. Recall, we only trained the classification part of the model. we can reload ir and then evalute it on the testing set,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.987141\n",
+      "\n",
+      "\n",
+      "Test Accuracy: 79% (666/836)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_transfer.load_state_dict(torch.load('model_transfer2.pt'))\n",
+    "import numpy as np\n",
+    "test(loaders_transfer, model_transfer, criterion_transfer, use_cuda)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that our new model performs much bet"
+   ]
   }
  ],
  "metadata": {
