add the inference function for local images

--- a/dog_breed_classifier.ipynb
+++ b/dog_breed_classifier.ipynb
@@ -1253,8 +1253,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that our new model performs much bet"
+    "We can see that our new model performs much better than the scratch ones. Nearly 80 %"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An it will be all regarding the model creation, training and testing. However, I think that it is interesting to build a function or set up for a server to ask for predictions. A server like flask, for example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we are going to create a function that given a local image path of a dog. We will predict its breed class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Affenpinscher\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import ImageFile\n",
+    "from PIL import Image\n",
+    "\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "## Replace \"_\" for \" \" for human readability\n",
+    "class_names = [item[4:].replace(\"_\", \" \") for item in train_data.classes]\n",
+    "\n",
+    "def predict_breed_transfer(img_path):\n",
+    "    \n",
+    "    normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                     std=[0.229, 0.224, 0.225])\n",
+    "    n_channels = 3\n",
+    "    shape = 224\n",
+    "    \n",
+    "    img_transform = transforms.Compose([\n",
+    "            transforms.Resize((shape, shape)),\n",
+    "            transforms.ToTensor(),\n",
+    "            normalize,\n",
+    "    ])\n",
+    "\n",
+    "    \n",
+    "    img_data = Image.open(img_path)\n",
+    "    image_normarlized = img_transform(img_data).view(-1,n_channels,shape,shape).cuda()\n",
+    "    \n",
+    "    model_transfer.eval()\n",
+    "    output = model_transfer.forward(image_normarlized)\n",
+    "    _, pred = torch.max(output, 1)  \n",
+    "    \n",
+    "    pred = int(pred.cpu().numpy())\n",
+    "    # load the image and return the predicted breed\n",
+    "    return class_names[pred]\n",
+    "\n",
+    "print(predict_breed_transfer(\"Affenpinscher_00006.jpg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
